# chess

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  cargo-bazel-lock.json
assets/: .gitignore  BUILD.bazel
assets/models/: bishop.blend  bishop.glb  chess_board.blend  chess_board.glb  king.blend  king.glb  knight.blend  knight.glb  pawn.blend  pawn.glb  queen.blend  queen.glb  rook.blend  rook.glb
src/: assets.rs  chess.rs  components.rs  main.rs  menu.rs  plugins.rs
src/chess/: board_coords.rs
tools/blender/: blender.bzl
