[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[features]
# A feature for identifying Cargo vs Bazel build systems.
cargo = []
default = ["cargo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.16.1"
lazy_static = "1.5.0"
strum = "0.27.2"
strum_macros = "0.27"
