"""Tactics"""

module(
    name = "tactics",
    version = "0.0.0",
)

bazel_dep(name = "rules_rust", version = "0.63.0")
bazel_dep(name = "rules_blender", version = "0.0.1")

RUST_VERSION = "1.88.0"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = [
        RUST_VERSION,
        "nightly/2025-04-03",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "tactics_rust_host_tools",
    version = RUST_VERSION,
)
use_repo(
    rust_host_tools,
    "tactics_rust_host_tools",
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    host_tools = "@tactics_rust_host_tools",
    lockfile = "//:cargo-bazel-lock.json",
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(
    crate,
    "crate_index",
)
